--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ tagline:             An attempt at better understanding things... by simulating 
 url:                 http://understandthroughsimulation.github.io/
 paginate:            1
 baseurl:             ""
-highlighter:        pygments
+highlighter:        Rouge
 # Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
